添加了时间段的分类劫持 加了一堆小米日历那种清晨、早上、中午、下午、傍晚、晚上、凌晨的细化时间。 但是有BUG：切换24小时制度后，这玩意还会在。 还有就是Harmony里面的日志没有生效。

--- a/RealTimeWeatherMod/RealTimeWeather.csproj
+++ b/RealTimeWeatherMod/RealTimeWeather.csproj
@@ -40,6 +40,9 @@
     <Reference Include="BepInEx">
       <HintPath>E:\SteamLibrary\steamapps\common\Chill with You Lo-Fi Story\BepInEx\core\BepInEx.dll</HintPath>
     </Reference>
+    <Reference Include="R3">
+      <HintPath>E:\SteamLibrary\steamapps\common\Chill with You Lo-Fi Story\Chill With You_Data\Managed\R3.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
