--- a/RealTimeWeatherMod/RealTimeWeather.csproj
+++ b/RealTimeWeatherMod/RealTimeWeather.csproj
@@ -85,6 +85,9 @@
     <Reference Include="UnityEngine.UnityWebRequestModule">
       <HintPath>$(GameDir)\Chill With You_Data\Managed\UnityEngine.UnityWebRequestModule.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.TextRenderingModule">
+      <HintPath>$(GameDir)\Chill With You_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChillEnvPlugin.cs" />
@@ -93,6 +96,7 @@
     <Compile Include="Models\SunResponse.cs" />
     <Compile Include="Models\WeatherData.cs" />
     <Compile Include="Patches\HarmonyPatches.cs" />
+    <Compile Include="Patches\ModSettingsIntegration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\KeySecurity.cs" />
     <Compile Include="Services\WeatherService.cs" />
