修复：添加解锁游戏币购买内容的配置项，更新插件版本至5.1.3，优化安装步骤说明，新增上帝模式解锁补丁

--- a/RealTimeWeatherMod/RealTimeWeather.csproj
+++ b/RealTimeWeatherMod/RealTimeWeather.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Models\WeatherData.cs" />
     <Compile Include="Patches\HarmonyPatches.cs" />
     <Compile Include="Patches\ModSettingsIntegration.cs" />
+    <Compile Include="Patches\UnlockConditionGodMode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\KeySecurity.cs" />
     <Compile Include="Services\WeatherService.cs" />
